Designed index page

--- a/index.html
+++ b/index.html
@@ -8,32 +8,34 @@
     <body>
         <header>Bootstrap Examples</header>
         <nav><a href="index.html">Home</a></nav>
-        <main>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
-                magna aliqua. Commodo odio aenean sed adipiscing diam. Fermentum dui faucibus in ornare quam viverra orci 
-                sagittis. Justo eget magna fermentum iaculis eu non. Nec sagittis aliquam malesuada bibendum. Et odio 
-                pellentesque diam volutpat commodo sed egestas egestas fringilla. Vel pretium lectus quam id. Risus quis 
-                varius quam quisque id diam vel quam elementum. Sagittis id consectetur purus ut. Ornare arcu odio ut sem 
-                nulla pharetra. Turpis massa sed elementum tempus egestas sed sed. Montes nascetur ridiculus mus mauris 
-                vitae ultricies leo. Ut ornare lectus sit amet est placerat in egestas erat. Volutpat ac tincidunt vitae 
-                semper quis lectus. Egestas quis ipsum suspendisse ultrices gravida dictum fusce. Proin sagittis nisl 
-                rhoncus mattis rhoncus urna neque. In eu mi bibendum neque egestas congue.
-            </p>
-            <p>Convallis posuere morbi leo urna molestie at elementum eu. Viverra suspendisse potenti nullam ac tortor vitae 
-                purus faucibus ornare. Arcu non sodales neque sodales ut. Quisque sagittis purus sit amet volutpat. Placerat 
-                in egestas erat imperdiet sed euismod. Placerat vestibulum lectus mauris ultrices. Ultrices vitae auctor eu 
-                augue ut lectus. Id velit ut tortor pretium viverra. Augue neque gravida in fermentum et sollicitudin. Amet 
-                risus nullam eget felis eget nunc lobortis mattis. Dapibus ultrices in iaculis nunc sed augue lacus viverra. 
-                Urna cursus eget nunc scelerisque viverra mauris.
-            </p>
-            <p>
-                Diam quam nulla porttitor massa id neque aliquam. Enim sed faucibus turpis in eu mi. Ut tortor pretium 
-                viverra suspendisse potenti nullam ac tortor. Sit amet massa vitae tortor condimentum lacinia quis vel eros. 
-                Commodo nulla facilisi nullam vehicula. Nulla pharetra diam sit amet nisl suscipit adipiscing bibendum. 
-                Faucibus pulvinar elementum integer enim neque. Ultrices dui sapien eget mi proin sed libero. Cras semper 
-                auctor neque vitae. At lectus urna duis convallis convallis tellus id interdum velit. Urna molestie at 
-                elementum eu facilisis sed odio morbi quis.
-            </p>
+        <main class="container">
+            <div class="row">
+                <p class="col-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
+                    magna aliqua. Commodo odio aenean sed adipiscing diam. Fermentum dui faucibus in ornare quam viverra orci 
+                    sagittis. Justo eget magna fermentum iaculis eu non. Nec sagittis aliquam malesuada bibendum. Et odio 
+                    pellentesque diam volutpat commodo sed egestas egestas fringilla. Vel pretium lectus quam id. Risus quis 
+                    varius quam quisque id diam vel quam elementum. Sagittis id consectetur purus ut. Ornare arcu odio ut sem 
+                    nulla pharetra. Turpis massa sed elementum tempus egestas sed sed. Montes nascetur ridiculus mus mauris 
+                    vitae ultricies leo. Ut ornare lectus sit amet est placerat in egestas erat. Volutpat ac tincidunt vitae 
+                    semper quis lectus. Egestas quis ipsum suspendisse ultrices gravida dictum fusce. Proin sagittis nisl 
+                    rhoncus mattis rhoncus urna neque. In eu mi bibendum neque egestas congue.
+                </p>
+                <p class="col-md">Convallis posuere morbi leo urna molestie at elementum eu. Viverra suspendisse potenti nullam ac tortor vitae 
+                    purus faucibus ornare. Arcu non sodales neque sodales ut. Quisque sagittis purus sit amet volutpat. Placerat 
+                    in egestas erat imperdiet sed euismod. Placerat vestibulum lectus mauris ultrices. Ultrices vitae auctor eu 
+                    augue ut lectus. Id velit ut tortor pretium viverra. Augue neque gravida in fermentum et sollicitudin. Amet 
+                    risus nullam eget felis eget nunc lobortis mattis. Dapibus ultrices in iaculis nunc sed augue lacus viverra. 
+                    Urna cursus eget nunc scelerisque viverra mauris.
+                </p>
+                <p class="col-md">
+                    Diam quam nulla porttitor massa id neque aliquam. Enim sed faucibus turpis in eu mi. Ut tortor pretium 
+                    viverra suspendisse potenti nullam ac tortor. Sit amet massa vitae tortor condimentum lacinia quis vel eros. 
+                    Commodo nulla facilisi nullam vehicula. Nulla pharetra diam sit amet nisl suscipit adipiscing bibendum. 
+                    Faucibus pulvinar elementum integer enim neque. Ultrices dui sapien eget mi proin sed libero. Cras semper 
+                    auctor neque vitae. At lectus urna duis convallis convallis tellus id interdum velit. Urna molestie at 
+                    elementum eu facilisis sed odio morbi quis.
+                </p>
+            </div>
         </main>
     </body>
 </html>
