--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <header>Bootstrap Examples</header>
         <nav><a href="index.html">Home</a></nav>
         <main class="container">
-            <div class="row">
+            <div class="row text-sm-left text-lg-center">
                 <p class="col-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
                     magna aliqua. Commodo odio aenean sed adipiscing diam. Fermentum dui faucibus in ornare quam viverra orci 
                     sagittis. Justo eget magna fermentum iaculis eu non. Nec sagittis aliquam malesuada bibendum. Et odio 
@@ -20,7 +20,7 @@
                     semper quis lectus. Egestas quis ipsum suspendisse ultrices gravida dictum fusce. Proin sagittis nisl 
                     rhoncus mattis rhoncus urna neque. In eu mi bibendum neque egestas congue.
                 </p>
-                <p class="col-md">Convallis posuere morbi leo urna molestie at elementum eu. Viverra suspendisse potenti nullam ac tortor vitae 
+                <p class="col-md text-primary p-2 border border-primary">Convallis posuere morbi leo urna molestie at elementum eu. Viverra suspendisse potenti nullam ac tortor vitae 
                     purus faucibus ornare. Arcu non sodales neque sodales ut. Quisque sagittis purus sit amet volutpat. Placerat 
                     in egestas erat imperdiet sed euismod. Placerat vestibulum lectus mauris ultrices. Ultrices vitae auctor eu 
                     augue ut lectus. Id velit ut tortor pretium viverra. Augue neque gravida in fermentum et sollicitudin. Amet 
