--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     </head>
     <body>
         <header>Bootstrap Examples</header>
-        <nav><a href="index.html">Home</a></nav>
+        <nav><a href="index.html">Home</a>
+            <a href="login.html">Login</a></nav>
         <main class="container">
             <div class="row text-sm-left text-lg-center">
                 <p class="col-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
