--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
         <header>Bootstrap Examples</header>
         <nav><a href="index.html">Home</a>
             <a href="login.html">Login</a>
+            <a href="slideshow.html">Slideshow</a>
         </nav>
         <div class="container"> 
             <form>
