--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <body>
         <header>Bootstrap Examples</header>
         <nav><a href="index.html">Home</a>
-            <a href="login.html">Login</a></nav>
+            <a href="login.html">Login</a>
+            <a href="slideshow.html">Slideshow</a>
+        </nav>
         <main class="container">
             <div class="row text-sm-left text-lg-center">
                 <p class="col-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
