Made animal cards

--- a/slideshow.html
+++ b/slideshow.html
@@ -10,6 +10,7 @@
         <nav><a href="index.html">Home</a>
             <a href="login.html">Login</a>
             <a href="slideshow.html">Slideshow</a>
+            <a href="cards.html">Animals</a>
         </nav>
         <div class="container"> 
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -22,6 +23,9 @@
                   </div>
                   <div class="carousel-item">
                     <img src="https://static.wikia.nocookie.net/onepiece/images/d/dd/Roger%27s_Execution_in_Loguetown.png/revision/latest/scale-to-width-down/210?cb=20130121222929" class="d-block w-100" alt="Gold Roger's Execution">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="https://static.wikia.nocookie.net/onepiece/images/6/6f/Loguetown_Marine_Base.png/revision/latest/scale-to-width-down/210?cb=20130622032748" class="d-block w-100" alt="Loguetown's Marine Base">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
