--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
         <title>Bootstrap Examples</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>Bootstrap Examples</header>
         <nav><a href="index.html">Home</a>
             <a href="login.html">Login</a>
             <a href="slideshow.html">Slideshow</a>
+            <a href="cards.html">Animals</a>
         </nav>
         <main class="container">
             <div class="row text-sm-left text-lg-center">
@@ -40,5 +40,6 @@
                 </p>
             </div>
         </main>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </body>
 </html>
