--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
         <nav><a href="index.html">Home</a>
             <a href="login.html">Login</a>
             <a href="slideshow.html">Slideshow</a>
+            <a href="cards.html">Animals</a>
         </nav>
         <div class="container"> 
             <form>
