--- a/index.html
+++ b/index.html
@@ -6,11 +6,26 @@
     </head>
     <body>
         <header>Bootstrap Examples</header>
-        <nav><a href="index.html">Home</a>
-            <a href="login.html">Login</a>
-            <a href="slideshow.html">Slideshow</a>
-            <a href="cards.html">Animals</a>
-        </nav>
+
+
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Navigation</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  <a class="nav-link" href="login.html">Login</a>
+                  <a class="nav-link" href="slideshow.html">Slideshow</a>
+                  <a class="nav-link" href="cards.html">Animals</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+
+
         <main class="container">
             <div class="row text-sm-left text-lg-center">
                 <p class="col-md">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
@@ -38,7 +53,7 @@
                     auctor neque vitae. At lectus urna duis convallis convallis tellus id interdum velit. Urna molestie at 
                     elementum eu facilisis sed odio morbi quis.
                 </p>
-            </div>
+            </div>            
         </main>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     </body>
