--- a/slideshow.html
+++ b/slideshow.html
@@ -7,10 +7,21 @@
     </head>
     <body>
         <header>Bootstrap Examples</header>
-        <nav><a href="index.html">Home</a>
-            <a href="login.html">Login</a>
-            <a href="slideshow.html">Slideshow</a>
-            <a href="cards.html">Animals</a>
+        <nav class="navbar navbar-expand-lg bg-light">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="#">Navigation</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link" href="login.html">Login</a>
+                <a class="nav-link" href="slideshow.html">Slideshow</a>
+                <a class="nav-link" href="cards.html">Animals</a>
+              </div>
+            </div>
+          </div>
         </nav>
         <div class="container"> 
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
